--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.0.0",
+        "@vitejs/plugin-vue": "^5.2.1",
         "axios": "^1.8.3",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "laravel-vite-plugin": "^1.2.0",
+        "vite": "^6.2.2"
     },
     "dependencies": {
         "@vue/compiler-sfc": "^3.5.13",
+        "pinia": "^2.3.1",
+        "video.js": "^8.22.0",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.5.0"
