--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
     "type": "module",
     "private": true,
     "scripts": {
-      "dev": "vite",
-      "build": "vite build"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-      "@vitejs/plugin-vue": "^5.2.1",
-      "axios": "^1.8.3",
-      "laravel-vite-plugin": "^1.2.0",
-      "vite": "^6.2.2"
+        "@vitejs/plugin-vue": "^5.2.1",
+        "axios": "^1.8.3",
+        "laravel-vite-plugin": "^1.2.0",
+        "vite": "^6.2.2"
     },
     "dependencies": {
-      "@vue/compiler-sfc": "^3.5.13",
-      "esbuild": "^0.25.1",
-      "pinia": "^2.3.1",
-      "video.js": "^8.22.0",
-      "vue": "^3.5.13",
-      "vue-router": "^4.5.0"
+        "@vue/compiler-sfc": "^3.5.13",
+        "esbuild": "^0.25.1",
+        "pinia": "^2.3.1",
+        "sass": "^1.85.1",
+        "video.js": "^8.22.0",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.0"
     }
-  }
+}
